--- a/views/inventario.ejs
+++ b/views/inventario.ejs
@@ -55,7 +55,7 @@
       <td><%= componente.descripcion %></td>
       <td>
         <% if (componente.imagen) { %>
-          <img src="/imagenes/<%= componente.imagen %>" width="50" />
+          <img src="<%= componente.imagen %>" width="50" />
         <% } else { %>
           Sin imagen
         <% } %>
